src/assets/components/_equipmentDashboard.scss
.equipmentDashboard {
    @include scrollWithoutScrollbar;

    .cardDiv {
        display: flex;
        flex-wrap: wrap;
    }

    .card {
        @include cardExtraLarge;
        flex-grow: 1;
        flex-basis: 500px;
        margin: 8px 8px;
        overflow: hidden;
    }

    h2 {
        @include smallTitle;
        color: $darkGray;
    }

    .responsiveLine {
        height: 50vh;
    }

    .buttonBar {
        display: flex;
        flex-direction: row;
        width: fit-content;
        justify-content: space-between;
        overflow: visible;
        margin-top: 0.25rem;
        margin-bottom: 0.25rem;
        margin-right: 0.25rem;
        align-items: center;
    }

    .dropdown {
        overflow: scroll;
        z-index: auto;

        .dropdownMenu {
            z-index: auto;
        }
    }
}

